# ipl_gpu

./: Cargo.toml  Readme.md  build.rs
src/: checksum.rs  main.rs  shader.glsl  shader.spv
src/gpu/: buffer.rs  compute.rs  layout.rs  mod.rs
src/shader/: shader.glsl  shader.spv
