[package]
name = "ipl_gpu"
version = "0.1.0"
authors = ["Max Bebök"]
description = "IPL GPU Hasher"
publish = false
edition = '2021'

[dependencies]
wgpu = { version = "0.18.0", features = ["spirv", "vulkan-portability"] }
bytemuck = "1.14.0"
flume = "0.11.0"
futures = "0.3.29"
futures-intrusive = "0.5.0"
clap = { version = "4.4.8", features = ["derive"] }
clap-num = "1.0.2"
fastrand = "2.0.1"

[profile.dev]
# Hashing completely relies on it
overflow-checks = false

[[bin]]
name = "ipl_gpu"
path = "src/main.rs"
